# AgentSearch

./: .dockerignore  .gitignore  Dockerfile  IMPROVEMENT_BACKLOG.md  LEGAL.md  LICENSE  README.md  README_CN.md  README_CS.md  README_HI.md  README_ID.md  README_JA.md  README_KR.md  README_PT.md  README_RU.md  README_TH.md  README_VI.md  SKILL.md  TASK.md  docker-compose.yml  pyproject.toml  requirements.txt  supervisor.py
.github/workflows/: canary-on-demand.yml  nightly-canary.yml
agent_search/: __init__.py  canary.py  cli.py  core.py  extract.py  health.py  mcp_server.py  multi.py  proxy.py  serve.py
agent_search/engines/: _ad_base.py  _ad_media.py  g1.py  (+78 more)
cloak_stealth_suite/: __init__.py  cli.py  mcp_server.py
deploy/: install.sh
tests/: nightly_canary.py  probe_instagram_baseline.py  probe_instagram_dom.py  probe_instagram_dump.py  probe_instagram_enhanced.py  probe_instagram_meta.py  probe_youtube_watch.py  test_1337x.py  test_ad_base.py  test_ad_media.py  test_ads_download_cli_mcp.py  test_ads_filters.py  test_ads_live.py  test_amazon.py  test_app_store.py  test_apple_podcasts.py  test_archive_org.py  test_arxiv.py  test_baidu.py  test_bilibili.py  test_bing.py  test_blackhatworld.py  test_brave.py  test_core.py  test_dev_docs.py  test_devto.py  test_douyin.py  test_duckduckgo.py  test_ebay.py  test_ecosia.py  test_extract_consent.py  test_facebook_docs.py  test_github_search.py  test_goodreads.py  test_google.py  test_google_ad_transparency.py  test_google_patents.py  test_google_stress.py  test_hackernews.py  test_huggingface.py  (+57 more)
tools/: audit_dev_docs_presets.py  audit_engines.py
(+91 files in other folders)
