[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-search"
version = "1.0.0"
description = "AgentSearch — local stealth-browser web search across 71 sites for AI agents. No API keys, no rate limits, no third-party servers."
requires-python = ">=3.12"
dependencies = [
    "cloakbrowser",
    "trafilatura>=2.0",
    "pdfplumber>=0.11",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]

[project.scripts]
agentsearch = "agent_search.cli:main"

[tool.setuptools.packages.find]
include = ["agent_search*"]
